Update nukleus and reaktor-test dependency versions

--- a/pom.xml
+++ b/pom.xml
@@ -51,10 +51,10 @@
     <k3po.nukleus.ext.version>0.7</k3po.nukleus.ext.version>
 
     <nukleus.plugin.version>0.10</nukleus.plugin.version>
-    <nukleus.version>0.7</nukleus.version>
+    <nukleus.version>0.8</nukleus.version>
 
     <nukleus.ws.spec.version>0.13</nukleus.ws.spec.version>
-    <reaktor.test.version>0.10.1</reaktor.test.version>
+    <reaktor.test.version>0.11</reaktor.test.version>
   </properties>
 
   <dependencies>
@@ -62,6 +62,7 @@
       <groupId>org.reaktivity</groupId>
       <artifactId>nukleus</artifactId>
       <version>${nukleus.version}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.reaktivity</groupId>
