--- a/pom.xml
+++ b/pom.xml
@@ -50,10 +50,10 @@
     <k3po.version>3.0.0-alpha-77</k3po.version>
     <k3po.nukleus.ext.version>0.7</k3po.nukleus.ext.version>
 
-    <nukleus.plugin.version>0.10</nukleus.plugin.version>
+    <nukleus.plugin.version>develop-SNAPSHOT</nukleus.plugin.version>
     <nukleus.version>0.7</nukleus.version>
 
-    <nukleus.ws.spec.version>0.13</nukleus.ws.spec.version>
+    <nukleus.ws.spec.version>develop-SNAPSHOT</nukleus.ws.spec.version>
     <reaktor.test.version>0.10.1</reaktor.test.version>
   </properties>
 
