--- a/pom.xml
+++ b/pom.xml
@@ -47,13 +47,13 @@
     <jmh.version>1.17.4</jmh.version>
     <jmh.profilers.version>0.1.3</jmh.profilers.version>
 
-    <k3po.version>3.0.0-alpha-77</k3po.version>
-    <k3po.nukleus.ext.version>0.7</k3po.nukleus.ext.version>
+    <k3po.version>3.0.0-alpha-79</k3po.version>
+    <k3po.nukleus.ext.version>develop-SNAPSHOT</k3po.nukleus.ext.version>
 
     <nukleus.plugin.version>0.10</nukleus.plugin.version>
     <nukleus.version>0.11</nukleus.version>
 
-    <nukleus.ws.spec.version>0.13</nukleus.ws.spec.version>
+    <nukleus.ws.spec.version>develop-SNAPSHOT</nukleus.ws.spec.version>
     <reaktor.version>0.22</reaktor.version>
   </properties>
 
