--- a/pom.xml
+++ b/pom.xml
@@ -47,14 +47,14 @@
     <jmh.version>1.17.4</jmh.version>
     <jmh.profilers.version>0.1.3</jmh.profilers.version>
 
-    <k3po.version>3.0.0-alpha-77</k3po.version>
-    <k3po.nukleus.ext.version>0.7</k3po.nukleus.ext.version>
+    <k3po.version>3.0.0-alpha-80</k3po.version>
+    <k3po.nukleus.ext.version>develop-SNAPSHOT</k3po.nukleus.ext.version>
 
     <nukleus.plugin.version>0.12</nukleus.plugin.version>
     <nukleus.version>0.11</nukleus.version>
 
-    <nukleus.ws.spec.version>0.14</nukleus.ws.spec.version>
-    <reaktor.version>0.22</reaktor.version>
+    <nukleus.ws.spec.version>develop-SNAPSHOT</nukleus.ws.spec.version>
+    <reaktor.version>develop-SNAPSHOT</reaktor.version>
   </properties>
 
   <dependencies>
