--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
     <k3po.nukleus.ext.version>0.12</k3po.nukleus.ext.version>
 
     <nukleus.plugin.version>0.13</nukleus.plugin.version>
-    <nukleus.version>develop-SNAPSHOT</nukleus.version>
+    <nukleus.version>0.12</nukleus.version>
 
     <nukleus.ws.spec.version>0.20</nukleus.ws.spec.version>
     <reaktor.version>develop-SNAPSHOT</reaktor.version>
