--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
     <nukleus.version>0.12</nukleus.version>
 
     <nukleus.ws.spec.version>0.20</nukleus.ws.spec.version>
-    <reaktor.version>develop-SNAPSHOT</reaktor.version>
+    <reaktor.version>0.31</reaktor.version>
   </properties>
 
   <dependencies>
