--- a/pom.xml
+++ b/pom.xml
@@ -42,14 +42,14 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <checkstyle.config.location>src/conf/checkstyle/configuration.xml</checkstyle.config.location>
     <checkstyle.suppressions.location>src/conf/checkstyle/suppressions.xml</checkstyle.suppressions.location>
-    <jacoco.coverage.ratio>0.47</jacoco.coverage.ratio>
-    <jacoco.missed.count>46</jacoco.missed.count>
+    <jacoco.coverage.ratio>0.46</jacoco.coverage.ratio>
+    <jacoco.missed.count>52</jacoco.missed.count>
 
     <junit.version>4.12</junit.version>
     <jmh.version>1.17.4</jmh.version>
     <jmh.profilers.version>0.1.3</jmh.profilers.version>
 
-    <k3po.version>3.0.0-alpha-86</k3po.version>
+    <k3po.version>develop-SNAPSHOT</k3po.version>
     <k3po.nukleus.ext.version>develop-SNAPSHOT</k3po.nukleus.ext.version>
 
     <nukleus.plugin.version>develop-SNAPSHOT</nukleus.plugin.version>
