--- a/pom.xml
+++ b/pom.xml
@@ -50,13 +50,13 @@
     <jmh.profilers.version>0.1.3</jmh.profilers.version>
 
     <k3po.version>3.0.0-alpha-86</k3po.version>
-    <k3po.nukleus.ext.version>0.16</k3po.nukleus.ext.version>
+    <k3po.nukleus.ext.version>develop-SNAPSHOT</k3po.nukleus.ext.version>
 
-    <nukleus.plugin.version>0.19</nukleus.plugin.version>
-    <nukleus.version>0.13</nukleus.version>
+    <nukleus.plugin.version>0.23</nukleus.plugin.version>
+    <nukleus.version>0.14</nukleus.version>
 
-    <nukleus.ws.spec.version>0.21</nukleus.ws.spec.version>
-    <reaktor.version>0.33</reaktor.version>
+    <nukleus.ws.spec.version>develop-SNAPSHOT</nukleus.ws.spec.version>
+    <reaktor.version>develop-SNAPSHOT</reaktor.version>
   </properties>
 
   <dependencies>
