--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
     <k3po.version>3.0.0-alpha-88</k3po.version>
     <k3po.nukleus.ext.version>develop-SNAPSHOT</k3po.nukleus.ext.version>
 
-    <nukleus.plugin.version>develop-SNAPSHOT</nukleus.plugin.version>
+    <nukleus.plugin.version>0.24</nukleus.plugin.version>
     <nukleus.version>0.13</nukleus.version>
 
     <nukleus.ws.spec.version>develop-SNAPSHOT</nukleus.ws.spec.version>
