--- a/pom.xml
+++ b/pom.xml
@@ -50,12 +50,12 @@
     <jmh.profilers.version>0.1.3</jmh.profilers.version>
 
     <k3po.version>3.0.0-alpha-88</k3po.version>
-    <k3po.nukleus.ext.version>develop-SNAPSHOT</k3po.nukleus.ext.version>
+    <k3po.nukleus.ext.version>0.18</k3po.nukleus.ext.version>
 
-    <nukleus.plugin.version>develop-SNAPSHOT</nukleus.plugin.version>
+    <nukleus.plugin.version>0.25</nukleus.plugin.version>
     <nukleus.version>0.17</nukleus.version>
 
-    <nukleus.ws.spec.version>develop-SNAPSHOT</nukleus.ws.spec.version>
+    <nukleus.ws.spec.version>0.23</nukleus.ws.spec.version>
     <reaktor.version>develop-SNAPSHOT</reaktor.version>
   </properties>
 
