Decoding fixes and improvements - decoderState unwinds the call stack and calls the next decoderState - Slots are not used as the max header size is only 14 bytes - Previously once the slot is used, the rest of the decoding continued to use the slot.   Now exact header length bytes are assembled. After header is decoded, payload   doesn't require any slot

--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
     <nukleus.plugin.version>0.25</nukleus.plugin.version>
     <nukleus.version>0.17</nukleus.version>
 
-    <nukleus.ws.spec.version>0.24</nukleus.ws.spec.version>
+    <nukleus.ws.spec.version>develop-SNAPSHOT</nukleus.ws.spec.version>
     <reaktor.version>0.39</reaktor.version>
   </properties>
 
