--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
 
     <nukleus.plugin.version>0.33</nukleus.plugin.version>
 
-    <nukleus.ws.spec.version>0.37</nukleus.ws.spec.version>
+    <nukleus.ws.spec.version>0.38</nukleus.ws.spec.version>
     <reaktor.version>0.78</reaktor.version>
   </properties>
 
@@ -192,6 +192,9 @@
         <artifactId>jacoco-maven-plugin</artifactId>
         <version>0.7.9</version>
         <configuration>
+          <excludes>
+            <exclude>org/reaktivity/nukleus/ws/internal/types/**/*.class</exclude>
+          </excludes>
           <rules>
             <rule>
               <element>BUNDLE</element>
