--- a/pom.xml
+++ b/pom.xml
@@ -49,13 +49,13 @@
     <jmh.version>1.17.4</jmh.version>
     <jmh.profilers.version>0.1.3</jmh.profilers.version>
 
-    <k3po.version>3.0.0-alpha-97</k3po.version>
-    <k3po.nukleus.ext.version>0.39</k3po.nukleus.ext.version>
+    <k3po.version>3.0.0-alpha-100</k3po.version>
+    <k3po.nukleus.ext.version>0.41</k3po.nukleus.ext.version>
 
     <nukleus.plugin.version>0.33</nukleus.plugin.version>
 
-    <nukleus.ws.spec.version>0.41</nukleus.ws.spec.version>
-    <reaktor.version>0.87</reaktor.version>
+    <nukleus.ws.spec.version>0.42</nukleus.ws.spec.version>
+    <reaktor.version>0.90</reaktor.version>
   </properties>
 
   <dependencies>
@@ -278,6 +278,13 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <version>2.4</version>
+        <configuration>
+          <archive>
+            <manifestEntries>
+              <Automatic-Module-Name>org.reaktivity.nukleus.ws</Automatic-Module-Name>
+          </manifestEntries>
+        </archive>
+        </configuration>
         <executions>
           <execution>
             <goals>
@@ -313,7 +320,7 @@
               </transformers>
               <artifactSet>
                 <includes>
-                  <include>org.agrona:Agrona</include>
+                  <include>org.agrona:agrona</include>
                   <include>org.reaktivity:nukleus</include>
                   <include>org.reaktivity:reaktor</include>
                   <include>org.openjdk.jmh:jmh-core</include>
