--- a/pom.xml
+++ b/pom.xml
@@ -50,12 +50,12 @@
     <jmh.profilers.version>0.1.3</jmh.profilers.version>
 
     <k3po.version>3.0.0-alpha-103</k3po.version>
-    <k3po.nukleus.ext.version>0.49</k3po.nukleus.ext.version>
+    <k3po.nukleus.ext.version>0.50</k3po.nukleus.ext.version>
 
-    <nukleus.plugin.version>0.40</nukleus.plugin.version>
+    <nukleus.plugin.version>0.42</nukleus.plugin.version>
 
-    <nukleus.ws.spec.version>0.48</nukleus.ws.spec.version>
-    <reaktor.version>0.98</reaktor.version>
+    <nukleus.ws.spec.version>develop-SNAPSHOT</nukleus.ws.spec.version>
+    <reaktor.version>0.100</reaktor.version>
   </properties>
 
   <dependencies>
