--- a/pom.xml
+++ b/pom.xml
@@ -53,8 +53,8 @@
 
     <nukleus.plugin.version>0.72</nukleus.plugin.version>
 
-    <nukleus.ws.spec.version>develop-SNAPSHOT</nukleus.ws.spec.version>
-    <reaktor.version>develop-SNAPSHOT</reaktor.version>
+    <nukleus.ws.spec.version>0.57</nukleus.ws.spec.version>
+    <reaktor.version>0.155</reaktor.version>
   </properties>
 
   <dependencies>
