--- a/pom.xml
+++ b/pom.xml
@@ -60,8 +60,8 @@
 
     <nukleus.plugin.version>0.85</nukleus.plugin.version>
 
-    <nukleus.ws.spec.version>develop-SNAPSHOT</nukleus.ws.spec.version>
-    <reaktor.version>develop-SNAPSHOT</reaktor.version>
+    <nukleus.ws.spec.version>0.61</nukleus.ws.spec.version>
+    <reaktor.version>0.166</reaktor.version>
   </properties>
 
   <dependencies>
